# Python-OC-Lettings-FR

./: .coverage  .coveragerc  .gitignore  .readthedocs.yaml  Dockerfile  README.md  entrypoint.sh  oc-lettings-site.sqlite3  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci-cd-pipeline.yml
doc/: conf.py
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt
lettings/: admin.py  models.py  urls.py  views.py
lettings/migrations/: 0001_initial.py  0002_auto_20240819_1457.py  0003_auto_20240819_1500.py
lettings/tests/: conftest.py  test_models.py  test_urls.py  test_views.py
oc_lettings_site/: settings.py  urls.py  views.py
oc_lettings_site/migrations/: 0002_auto_20240813_1319.py  0003_delete_profile.py
profiles/: models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
profiles/tests/: conftest.py  test_models.py  test_urls.py  test_views.py
static/css/: styles.css
templates/: 404_error.html  500_error.html  index.html
