[flake8]
max-line-length = 99
exclude = **/migrations/*,venv,doc/

[tool:pytest]
DJANGO_SETTINGS_MODULE = oc_lettings_site.settings
python_files = tests.py
addopts = -v

[metadata]
name = oc_lettings_site
version = 0.1.0
description = Site web Orange County Lettings
author = Imen
author_email = imen.benrhouma93@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
install_requires =
    django==3.0
    sentry-sdk
    python-dotenv
    whitenoise

[options.packages.find]
where = 
    lettings
    oc_lettings_site
    profiles
